--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
     <title>Shopping Cart JS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
-    <!-- FontAwesome 6.1.1 CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- (Optional) Use CSS or JS implementation -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"
-        integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
 </head>
 
 <body>
@@ -33,12 +22,12 @@
                 <ul>
                     <li class="btn home">
                         <a href="./">
-                            <img src="./home.png" alt=""> Home
+                            <img src="./icons/home.png" alt=""> Home
                         </a>
                     </li>
                     <li class="btn">
                         <a href="#">
-                            <img src="./filter.png" alt="filter">
+                            <img src="./icons/filter.png" alt="filter">
                         </a>
                     </li>
                     <li>
@@ -59,8 +48,8 @@
                 </ul>
             </nav>
             <div class="shopping-bag">
-                <a href="./cart.html">
-                    <img src="./bag.png" alt="cart">
+                <a href="#">
+                    <img src="./icons/bag.png" alt="cart">
                     Cart
                     <div class="total-items-in-cart">
                         0
@@ -73,18 +62,18 @@
                 <div class="products-preview">
                     <div class="products-container">
                         <div class="product">
-                            <img src="./t1.png" alt="t-shirt 1">
+                            <img src="./img/t1.png" alt="t-shirt 1">
                         </div>
                         <div class="product">
-                            <img src="./t2.png" alt="t-shirt 2">
+                            <img src="./img/t2.png" alt="t-shirt 2">
                         </div>
                         <div class="product">
-                            <img src="./t4.png" alt="t-shirt 3">
+                            <img src="./img/t4.png" alt="t-shirt 3">
                         </div>
                     </div>
                     <div class="more-details">
                         <div class="see-more-btn">
-                            <img src="./right-arrow.png" alt="">
+                            <img src="./icons/right-arrow.png" alt="">
                             Details
                         </div>
                         <div class="description">
@@ -95,9 +84,9 @@
                     </div>
                 </div>
                 <div class="model">
-                    <img class="model-img" src="./model.png" alt="model">
+                    <img class="model-img" src="./img/model.png" alt="model">
                     <div class="product">
-                        <img src="./t3.png" alt="t-shirt 4">
+                        <img src="./img/t3.png" alt="t-shirt 4">
                     </div>
                 </div>
             </div>
@@ -106,7 +95,6 @@
     <div class="products-list">
         <div class="products">
             <!-- render porducts here -->
-
         </div>
         <div class="cart">
             <div class="cart-header">
@@ -116,7 +104,6 @@
             </div>
             <div class="cart-items">
                 <!-- render cart items here -->
-
             </div>
             <div class="cart-footer">
                 <div class="subtotal">
@@ -137,8 +124,18 @@
             porductsListEl.scrollIntoView({ behavior: "smooth" })
         })
     </script>
+
+    <script src="./products.js"></script>
+    <!-- <script src="./demo2.js"></script> -->
+    <script src="./script.js"></script>
+    <!-- <script src="./app.js"></script> -->
 </body>
-<script src="./products.js"></script>
-<script src="./app.js"></script>
 
 </html>
+<style>
+    .elements{
+        width: 400px;
+        font-weight: 800;
+        
+    }
+</style>
